# windows-package-tool

./: AUTHORS  INSTALL  MANIFEST.in  README.md  pyproject.toml  requirements.txt
doc/: package_policy.md  wpt_cli.md
tests/: test_resolve_dependencies.py  test_upgrade.py
wpt/: __init__.py  __main__.py  package_manager.py  settings.py  utils.py
