# https://setuptools.pypa.io/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-package-tool"
dynamic = ["version"]
authors = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
maintainers = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
license = { text = "GPL-3.0-or-later" }
description = "Windows Package Tool is a simplified Package Management System for Windows"
readme = "README.md"
keywords = ["pms", "systems management", "windows"]
requires-python = ">=3.9"
dependencies = [
    "packaging",
    "requests",
    "wmi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[project.scripts]
wpt = "wpt.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "wpt.__version__"}

[tool.pylint]
max-line-length = 120
